src/tests/snapshots/gitu__tests__log__limit_set_10.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 8bb5532 main add first commit                                                  |
 6c08cf7 add second commit                                                      |
 79e63f1 add third commit                                                       |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Log                Arguments                                                   |
 l     current      -F Search messages (--grep)                                 |
 o     other        -n Limit number of commits (-n=10)                          |
 q/esc Quit/Close                                                               |
styles_hash: 30fe388a93571409
