src/tests/snapshots/gitu__tests__log__log_empty_branch.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌                                                                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 90ecdf643519e051
