src/tests/snapshots/gitu__tests__log__rendered_log_copy_hash_of_the_selected_commit.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
                                                                                |
 ▸ 8bb5532 Author Name 2024-02-16 (HEAD -> main)                                |
     add first commit                                                           |
                                                                                |
▌▸ 6c08cf7 Author Name 2024-02-16                                               |
▌    add second commit                                                          |
                                                                                |
 ▸ 79e63f1 Author Name 2024-02-16                                               |
     add third commit                                                           |
                                                                                |
 ▸ b66a0bf Author Name 2024-02-16 (origin/main, origin/HEAD)                    |
     add initial-file                                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
> Commit hash copied to clipboard                                               |
styles_hash: f67a85eb5b958890
