src/tests/snapshots/gitu__tests__log__rendered_log_empty_branch_falls_back.snap
---
source: src/tests/log.rs
expression: ctx.redact_buffer()
---
▌                                                                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: fd361eadad4094c9
